# dotfiles

./: .bash_profile  .bashrc  .chezmoiignore  .commitlintrc.json  .dockerignore  .gitignore  .gitkeep  .markdownlint-cli2.yaml  .mise.toml  .release-it.json  .releaserc.json  .rumdl.toml  .textlintignore  .textlintrc.json  .tmux.conf  .vimrc  .zshenv  .zshrc  CHANGELOG.md  CLAUDE.md  COLOR.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MIGRATION.md  README.md  VERSION  VERSION.md  VERSIONING.md  cliff.toml  create_dot_mise.toml  dev-test.sh  docker-compose.yml  dot_bashrc  dot_zshenv  dotfilesLink.sh  flake.nix  install  install.sh  (+16 more)
.claude/rules/: claude-config-scope-routing.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  pr-title.yml  prepare_release.yml  qa-test.yml  release-please.yml  release-prepare.yml  release-publish.yml  release.yml  rust.yml  semantic-release.yml  test.yml
bash/: .bashrc  bashrc  common.sh  install.sh  interactive.sh  login.sh  nonlogin.sh
configs/bash/: .bash_profile  .bashenv  .bashrc  manifest.toml
configs/bat/: config  manifest.toml
configs/claude/: manifest.toml
configs/claude-private/: manifest.toml
configs/cursor/: manifest.toml
configs/eza/: 40-eza.fish  manifest.toml
configs/fish/: manifest.toml
configs/fzf-picker/: __fzf_ghq_readme_preview.fish  __fzf_picker_preview.fish  _fzf_gh.fish  _fzf_ghq_cd.fish  _fzf_worktree_remove.fish  cdabbr.fish  manifest.toml
configs/gh-clone/: manifest.toml
configs/ghostty/: config  manifest.toml  theme-auto  theme-dark  theme-light
configs/git/: config  manifest.toml  user
configs/merge-ready/: manifest.toml  merge-ready.toml
configs/mise/: config.toml  manifest.toml
configs/nvim/: README.md  lazy-lock.json  manifest.toml
configs/ps-grep/: manifest.toml
configs/starship/: manifest.toml  starship.toml
configs/stats/: Stats.plist  manifest.toml
configs/textlint/: .textlintrc.json  manifest.toml
configs/workers/: 60-daily-check.fish  70-git-background-fetch.fish  manifest.toml
configs/yt/: 30-yt.fish  manifest.toml
configs/zellij/: manifest.toml
crates/clip/: CHANGELOG.md  Cargo.toml
crates/clip/src/: cli.rs  clipboard.rs  lib.rs  main.rs  obj.rs  path.rs  text.rs
crates/clip/tests/e2e/: cli.rs  mod.rs  path.rs  text.rs
crates/color/: Cargo.toml
crates/color/src/: main.rs
crates/color/tests/e2e/: mod.rs
crates/copy-obj/: Cargo.toml
crates/copy-obj/src/: main.rs
crates/copy-obj/tests/e2e/: mod.rs
crates/dotfiles-support/: Cargo.toml
crates/dotfiles-support/src/: lib.rs
crates/dotfiles-workers/: CHANGELOG.md  Cargo.toml
crates/dotfiles-workers/tests/e2e/: mod.rs
crates/env-tools/: CHANGELOG.md  Cargo.toml
crates/env-tools/src/: banner.rs  command.rs  lib.rs
crates/env-tools/tests/e2e/: cleanup_env.rs
crates/fzf-picker/: CHANGELOG.md  Cargo.toml
crates/fzf-picker/src/: expand.rs  format.rs  gh.rs  launch.rs  lib.rs  parse.rs  worktree.rs
crates/fzf-picker/tests/e2e/: fzf_gh.rs  fzf_ghq_cd.rs  fzf_worktree_remove.rs  mod.rs
crates/gcm/: CHANGELOG.md  Cargo.toml
crates/gcm/src/: claude.rs  execute.rs  main.rs  ui.rs
crates/gcm/tests/e2e/: mod.rs
crates/gh-clone/: Cargo.toml
crates/gh-clone/src/: main.rs
crates/gh-clone/tests/e2e/: mod.rs
crates/git-upstream/: CHANGELOG.md  Cargo.toml
crates/git-upstream/src/: main.rs
crates/git-upstream/tests/e2e/: mod.rs
crates/v-sync/: CHANGELOG.md  Cargo.toml
crates/v-sync/src/: main.rs
crates/v-sync/tests/e2e/: mod.rs
docs/: dotfiles-native-design.md  fish-migration-from-zsh.md  rust-design-best-practices.md  rust-tools.md
dot_config/ghostty/: config
dot_config/git/: config.tmpl  ignore.tmpl
dot_config/mise/: create_config.toml
dot_config/nvim/: PLUGINS.md  lazy-lock.json
dot_config/sheldon/: plugins.toml
dot_config/zellij/: config.kdl
dot_config/zsh/: dot_zshrc.tmpl  run_after_zcompile-zsh.sh.tmpl
fish/: fish_variables
fish/conf.d/: 01-fzf-env.fish  04-fzf-bindings.fish  05-zeno-abbr.fish
fish/functions/: fish_prompt.fish
git/: .gitconfig  .gitignore_dotfiles  alias.config  core.config  delta.config  git.config  install  install.sh  install_win.ps1  misc.config  user.config  vimdiff.config
git/config/: alias  core
home/: .chezmoiignore  .chezmoiremove.tmpl  dot_bash_profile.tmpl  dot_bashenv.tmpl  dot_bashrc.tmpl  dot_zshenv
home/.chezmoiscripts/: run_after_doctor-check.sh.tmpl  run_after_setup-ghostty-macos-symlink.sh.tmpl  run_after_sync-fish.sh.tmpl  run_before_upgrade-packages.sh.tmpl  run_onchange_after_build-bat-cache.sh.tmpl  run_onchange_after_cargo-install.sh.tmpl  run_onchange_before_cargo-install.sh.tmpl
home/Config/: Stats.plist
home/dot_claude/: modify_settings.json.tmpl  settings.json  (+3 more)
iterm/: favorite.itermcolors
linux/: .imwheelrc  .xprofile  firefox_config.md  imwheel.service  install.sh  iptables_init.sh  set_imwheel.sh
migration-backup/: mapping_20260104_150736.txt  releases_before_v_prefix_20260104_154235.txt  tags_before_v_prefix_20260104_154235.txt
nix/: lint.py  lint.sh
nvim/: README.md  init.lua  install.sh  lazy-lock.json
powershell/: Microsoft.PowerShell_profile.ps1  install.bat
src/: apply.rs  color.rs  compose.rs  copy.rs  discover.rs  doctor.rs  gate.rs  gcm.rs  generate.rs  hooks.rs  inject.rs  lib.rs  list.rs  local.rs  local_store.rs  locals.rs  main.rs  manifest.rs  merge.rs  onchange.rs  profile.rs  prompt.rs  resolve.rs  secret.rs  source.rs  state.rs  store.rs  strategy.rs  theme.rs
tmux/: .tmux.conf  note.md  tmux.conf  tpm_clone.sh
tools/dotfiles-lint/: Cargo.toml
tools/dotfiles-lint/src/: lint.rs  main.rs
tools/dotfiles-lint/src/lint/: classify.rs  collect.rs  exec.rs  report.rs  template.rs
tools/dotfiles-lint/src/lint/rules/: fish.rs  lua.rs  markdown.rs  mod.rs  python.rs  shell.rs  textlint.rs  toml.rs
tools/v-sync/: Cargo.toml
tools/v-sync/src/: main.rs
tools/v-sync/tests/e2e/: mod.rs
vim/: .vimrc
zsh/: .zlogin  .zshenv  .zshrc  color_clone.sh  zshenv  zshrc  zshrc_includes.tmpl
(+401 files in other folders)
