# root package = `dotfiles` コマンド（= dotfiles 本体 / core）。
# いまは chezmoi と各コマンドに委譲しているが、将来それらを取り込む器。
# version は SoT（タグ `v{version}`）。当面は clap で `dotfiles --version` が取れれば十分。
# publish はあえて false にしない: release-plz は Cargo.toml が publish=false の package を
# release 対象から除外しタグを作らない（再追加すると release が "nothing to release" になる）。
# crates.io への publish 抑止は release-plz config の publish=false + git_only に一本化。
[package]
description = "toshiki670/dotfiles 本体（core）コマンド"
edition     = { workspace = true }
license     = { workspace = true }
name        = "dotfiles"
repository  = { workspace = true }
version     = "0.69.6"

[dependencies]
clap        = { workspace = true }
include_dir = { workspace = true }
libc        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
strum       = { workspace = true }
tempfile    = { workspace = true }
toml        = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rstest     = { workspace = true }

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

# --- Cargo workspace（root package + members） -----------------------------
# 各コマンドは crates/<name>/、配布物は版を振り release-plz で個別タグ。
# 開発専用ツール（lint）は tools/ 配下に置き、版を振らず install もしない。
[workspace]
members  = [ "crates/*", "tools/dotfiles-lint" ]
resolver = "3"

# 全 member 共通のパッケージメタ（各 Cargo.toml から `xxx.workspace = true` で参照）。
[workspace.package]
edition    = "2024"
license    = "MIT"
repository = "https://github.com/toshiki670/dotfiles"

# 全 member 共通の依存（各 Cargo.toml から `xxx.workspace = true` で参照）。
[workspace.dependencies]
clap          = { version = "4", features = [ "derive" ] }
clap_complete = "4"
ignore        = "0.4"
include_dir   = "0.7"
libc          = "0.2"
serde         = { version = "1", features = [ "derive" ] }
serde_json    = "1"
sha2          = "0.10"
strum         = { version = "0.27", features = [ "derive" ] }
tempfile      = "3"
toml          = "0.8"
# E2E（dev-dependencies）
assert_cmd = "2.2"
predicates = "3.1"
rstest     = "0.26"

# 全 member 共通の lint（各 Cargo.toml の `[lints] workspace = true` で参照）。
# 初期は最小（CI の `clippy -D warnings` を壊さない範囲）。
[workspace.lints]

[profile.release]
strip = true
