# root package = `dotfiles`。配布コマンド群を 1 パッケージの複数 bin として束ねる
# （core ＋ clip / gcm / gh-clone / git-upstream / fzf-picker 系 / upkeep 系 / workers）。
# `cargo install --git <repo>` 一発で全 bin が `~/.cargo/bin` に入る。
# version は SoT（タグ `v{version}`）＝唯一の配布版。
# publish はあえて false にしない: release-plz は Cargo.toml が publish=false の package を
# release 対象から除外しタグを作らない（再追加すると release が "nothing to release" になる）。
# crates.io への publish 抑止は release-plz config の publish=false + git_only に一本化。
[package]
description = "toshiki670/dotfiles の配布コマンド群（core ＋ clip / gcm / fzf-picker / upkeep ほか）"
edition     = { workspace = true }
license     = { workspace = true }
name        = "dotfiles"
repository  = { workspace = true }
version     = "0.71.4"

[dependencies]
clap          = { workspace = true }
clap_complete = { workspace = true }
include_dir   = { workspace = true }
libc          = { workspace = true }
plist         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
strum         = { workspace = true }
tempfile      = { workspace = true }
toml          = { workspace = true }
which         = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rstest     = { workspace = true }

# E2E（バイナリの振る舞い）は family ごとに 1 テストターゲットへ分割し参照性を保つ。
# 内部ロジックのユニットテストは各モジュールの `#[cfg(test)]` 側に同居する。
[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[[test]]
name = "clip"
path = "tests/clip/mod.rs"

[[test]]
name = "gcm"
path = "tests/gcm/mod.rs"

[[test]]
name = "gh-clone"
path = "tests/gh_clone/mod.rs"

[[test]]
name = "git-upstream"
path = "tests/git_upstream/mod.rs"

[[test]]
name = "fzf-picker"
path = "tests/fzf_picker/mod.rs"

[[test]]
name = "upkeep"
path = "tests/upkeep/mod.rs"

[[test]]
name = "workers"
path = "tests/workers/mod.rs"

# --- Cargo workspace（root package + members） -----------------------------
# 配布物は root `dotfiles` パッケージ 1 つに統合。workspace member は開発・保守ツールの
# みで、いずれも版を振らず install もしない（release-plz 対象外）。
[workspace]
members  = [ "tools/dotfiles-lint", "tools/v-sync" ]
resolver = "3"

# 全 member 共通のパッケージメタ（各 Cargo.toml から `xxx.workspace = true` で参照）。
[workspace.package]
edition    = "2024"
license    = "MIT"
repository = "https://github.com/toshiki670/dotfiles"

# 全 member 共通の依存（各 Cargo.toml から `xxx.workspace = true` で参照）。
[workspace.dependencies]
clap          = { version = "4", features = [ "derive" ] }
clap_complete = "4"
ignore        = "0.4"
include_dir   = "0.7"
libc          = "0.2"
plist         = "1.10"
serde         = { version = "1", features = [ "derive" ] }
serde_json    = "1"
strum         = { version = "0.28", features = [ "derive" ] }
tempfile      = "3"
toml          = "1.1"
which         = "8"
# E2E（dev-dependencies）
assert_cmd = "2.2"
predicates = "3.1"
rstest     = "0.26"

# 全 member 共通の lint（各 Cargo.toml の `[lints] workspace = true` で参照）。
# 初期は最小（CI の `clippy -D warnings` を壊さない範囲）。
[workspace.lints]

[profile.release]
strip = true
