[project]
name    = "dotfiles"
version = "0.68.0"

[tool.semantic_release]
build_command = ""
major_on_zero = false
version_toml  = [ "pyproject.toml:project.version" ]

[[tool.semantic_release.branches]]
match      = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
minor_tags = [ "feat" ]
patch_tags = [ "fix", "perf" ]

[tool.ruff]
line-length    = 88
target-version = "py313"

[tool.ruff.lint]
select = [ "E", "F", "I" ]

[tool.pytest.ini_options]
testpaths = [ "tests/lint" ]

[tool.mypy]
files               = [ "nix/lint", "tests/lint" ]
mypy_path           = [ "nix" ]
python_version      = "3.13"
strict              = true
warn_unused_configs = true
