# upstream リモートを追従するマージヘルパー配布コマンド（git upstream サブコマンド）。
[package]
name        = "git-upstream"
description = "upstream/master を fetch してマージする / upstream リモートを初期化する"
version     = "0.1.0"
publish     = false
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]
clap = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rstest     = { workspace = true }

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[lints]
workspace = true
