# nvim プラグインを同期し lazy-lock.json を chezmoi ソースへ re-add する配布コマンド。
[package]
name        = "v-sync"
description = "Neovim プラグインを同期し lazy-lock.json を chezmoi ソースへ re-add する"
version     = "0.1.0"
publish     = false
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]
clap             = { workspace = true }
dotfiles-support = { path = "../dotfiles-support" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rstest     = { workspace = true }

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[lints]
workspace = true
