# nvim プラグインを同期し lazy-lock.json を chezmoi ソースへ re-add する保守ツール。
# エンドユーザーの日常コマンドではなく repo ソースを更新する作業なので、dotfiles-lint と
# 同格に tools/ へ置く。版を振らず（release-plz は release=false）、install もしない。
# 実行は mise タスク（`mise run v-sync` ＝ `cargo run -p v-sync`）。
[package]
description = "Neovim プラグインを同期し lazy-lock.json を chezmoi ソースへ re-add する（保守ツール）"
edition     = { workspace = true }
license     = { workspace = true }
name        = "v-sync"
repository  = { workspace = true }
version     = "0.1.0"

[dependencies]
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rstest     = { workspace = true }
tempfile   = { workspace = true }

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[lints]
workspace = true
